# boka

./: .gitignore  next.config.ts  package-lock.json  package.json
app/: globals.css  page.tsx
app/api/depth/: route.ts
bokeh-studio/: package.json  tsconfig.json
bokeh-studio/app/: layout.tsx
bokeh-studio/components/: RightPanel.tsx  Toolbar.tsx  Viewport.tsx
bokeh-studio/components/panels/: AdvancedPanel.tsx  LensPanel.tsx
bokeh-studio/lib/engine/: BokehEngine.ts  shaders.ts
bokeh-studio/lib/store/: useEditorStore.ts
bokeh-studio/public/: bokeh-worker.js
components/: HistoryPanel.tsx  RightPanel.tsx  Toolbar.tsx  Viewport.tsx
components/panels/: DepthPanel.tsx  LensPanel.tsx
components/ui/: Slider.tsx
lib/depth/: depthApi.ts
lib/engine/: BokehEngine.ts  Canvas2DFallback.ts  shaders.ts
lib/store/: useEditorStore.ts
public/: bokeh-wasm-worker.js  bokeh-worker.js
wasm/: Cargo.toml
wasm/src/: lib.rs
